# dockerized-anthropic-vision-agent

./: .dockerignore  .env.template  Dockerfile  Makefile  compose.yaml  pyproject.toml
computer_use_demo/: __init__.py  http_server.py
image/: entrypoint.sh
