[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["computer_use_demo"]

[project]
name = "computer-use-demo"
version = "0.1.0"
description = "Computer use demonstration environment"
requires-python = "==3.11.6"
authors = [
    { name = "Teo", email = "teocns@gmail.com" }
]

dependencies = [
    "streamlit>=1.38.0",
    "anthropic[bedrock,vertex]>=0.37.1",
    "jsonschema==4.22.0",
    "boto3>=1.28.57",
    "google-auth<3,>=2",
    "agentops>=0.3.18",
]

[project.optional-dependencies]
dev = [
    "debugpy==1.8.1",
]



[tool.ruff]
line-length = 88
target-version = "py311"
extend-exclude = [".venv"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    "A",
    "ASYNC", 
    "B",
    "E",
    "F",
    "I",
    "PIE",
    "RUF200",
    "T20",
    "UP",
    "W",
]
ignore = ["E501", "ASYNC230"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
